# broadband-agent-demo

./: CLAUDE.md  requirements.txt
backend/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
backend/api/: agent_bridge.py  event_adapter.py  main.py  models.py  repository.py  sse.py
backend/api/routes/: conversations.py  images.py  messages.py  protection_plan.py
backend/configs/: agents.yaml  data_paths.yaml  model.yaml
backend/core/: agent_factory.py  model_loader.py  session_manager.py
backend/core/observability/: db.py  logger.py  tracer.py
backend/fae_poc/: __init__.py
backend/prompts/: insight.md  orchestrator.md  planning.md  provisioning.md
backend/scripts/: dump_events.py
backend/skills/cei_pipeline/: SKILL.md
backend/skills/cei_pipeline/references/: weight_parameters.md
backend/skills/cei_score_query/: SKILL.md
backend/skills/differentiated_delivery/scripts/: render.py
backend/skills/experience_assurance/: SKILL.md
backend/skills/fault_diagnosis/: SKILL.md
backend/skills/goal_parsing/: SKILL.md
backend/skills/insight_decompose/: SKILL.md
backend/skills/insight_nl2code/: SKILL.md
backend/skills/insight_query/: SKILL.md
backend/skills/insight_reflect/: SKILL.md
backend/skills/insight_report/: SKILL.md
backend/skills/plan_design/: SKILL.md
backend/skills/plan_review/: SKILL.md
backend/skills/plan_store/: SKILL.md
backend/skills/remote_optimization/: SKILL.md
backend/skills/wifi_simulation/: SKILL.md
backend/tests/: test_smoke.py
backend/ui/: app.py  chat_renderer.py  session_state.py
(+156 files in other folders)
